# chessit_irr

./: CMakeLists.txt  Makefile  ONNX_MODELS.ipynb  README.md
docs/: index.html
include/irrai/: IAIEntity.h  IAIManager.h  IAISensor.h  ICombatNPC.h  IDebugFOVSceneNode.h  IFieldOfView.h  INPC.h  IPathFinder.h  IPlayerAIEntity.h  IWaypoint.h  IrrAI.h  Utility.h  readme.txt
include/irrlicht/: IrrCompileConfig.h  readme.txt
include/onnx/: onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  onnxruntime_ep_c_api.h  onnxruntime_session_options_config_keys.h  readme.txt
include/soloud/: readme.txt
lib/: readme.txt
media/: BISPO_WHITE2.mtl  BOARDER.mtl  CHESSIT_POSITIONS.txt  PAWN_BLACK6.mtl  env.irr  readme.txt
media/sound_efx/: readme.txt
media/sounds/: readme.txt
media/textures/: readme.txt
src/: main.cpp
src/Core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h
src/Game/: BoardSquare.cpp  BoardSquare.h  ChessPiece.cpp  ChessTypes.h  GameEvents.h
src/Managers/: AIManager.cpp  AIManager.h  BillboardManager.cpp  BillboardManager.h  BoardManager.cpp  BoardManager.h  ChessSceneManager.cpp  ChessSceneManager.h  InputManager.cpp  InputManager.h  ONNXAIManager.cpp  ONNXAIManager.h  PieceManager.cpp  PieceManager.h  SaveReplaySystem.cpp  SaveReplaySystem.h  SoundManager.cpp  SoundManager.h  UIAudioMenu.cpp  UIAudioMenu.h  UIManager.cpp  UIManager.h
src/Parsing/: PositionParser.cpp  PositionParser.h
src/Rules/: ChessRules.cpp  ChessRules.h
training/: README.md  inline_onnx_external_data.py  leia-me.txt  requirements.txt  train_chessit_model.py
